# cosmic-periodicities

./: CCv0_4.py  CCv8.py  CCv8_1.py  CCv8_2.py  CCv8_3.py  CCv8_4.py  COEFFICIENT_JWST.py  DERIVATIVE_PLOT.py  FUNCTION_JWST.py  JWST_A.py  JWST_B.py  JWST_PREDICTOR.py  JWST_PREDICTOR_v2.py  OSC_JWST.py  OSC_JWST_v3.py  README.md  SCANNER_JWST.py  STATISTICS_JWST.py  STRUCTURE_JWST.py  STRUCTURE_JWST_v2.py  TEST_CERO_JWST.py  TEST_CERO_JWST_v2.py  VOID_JWST.py  cristal_core.txt  eROSITA_SDSS.py  eROSITA_fits_csv.py  lib_rs.txt  unified_crystal_engine.txt
data/: datasets.txt  datasets_v2.txt
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
